[package]
name = "treasury_sweeper"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tokio = { version = "1.48", features = ["full"] }
anyhow = "1.0.100"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9.2"
hex = "0.4.3"
dashmap = "6.1.0"
chrono = { version = "0.4.42", features = ["serde"] }

[dev-dependencies]
tempfile = "3.14.0"